# InnoCPC

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
InnoCPC/: manage.py  settings.py  urls.py  wsgi.py
InnoCPC/InnoCPC/: asgi.py  settings.py
InnoCPC/api/: crud.py  decorators.py  models.py  response.py  urls.py  utils.py  views.py
InnoCPC/api/templates/: login.html
src/: main.py
src/core/: loader.py  routes.py  settings.py
src/models/: Points.py  User.py  __init__.py  base.py
src/serializers/forms/: user.py
src/services/: telegram_auth.py
src/templates/: base.html  login.html
src/views/: login.py
